# versioning

./: .releaserc.json  pyproject.toml  setup.py  updateversion.py
.github/workflows/: releaseyml
projectA/: main.py  pyproject.toml  setup.py
projectA/projectA.egg-info/: PKG-INFO  SOURCES.txt
projectB/: main.py  pyproject.toml  setup.py  version.py
projectB/projectB.egg-info/: PKG-INFO  SOURCES.txt
versioning_package.egg-info/: PKG-INFO  SOURCES.txt
