[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projectB"
description = "A small Python test project for semantic-release"
authors = [
    { name = "mnoor", email = "mb98.noor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.semantic_release]
version_source = "tag"
upload_to_pypi = false